# geomeTRIC-pyo3

./: Cargo.toml  LICENSE-APACHE  readme.md
.github/workflows/: test.yml
examples/: blank_driver.rs  model_driver.rs
src/: engine.rs  interface.rs  lib.rs  main.rs  optimize.rs  prelude.rs  readme.md  util.rs
