[package]
name = "geometric-pyo3"
description = "PyO3 (Rust) interface to geomeTRIC (molecular structure geometry optimization program)"
readme = "readme.md"

version = "0.1.1"
edition = "2021"
repository = "https://github.com/RESTGroup/geomeTRIC-pyo3"
keywords = ["chemistry"]
categories = ["science"]
license = "Apache-2.0"

[dependencies]
pyo3 = { version = "0.24.2" }
tempfile = { version = "3.19" }
toml = { version = "0.8" }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
name = "blank_driver"
doc-scrape-examples = true

[[example]]
name = "model_driver"
doc-scrape-examples = true
